# StockBeasts

./: CMakeCache.txt  CMakeLists.txt  Environment.cpp  Environment.h  Organism.cpp  README.md  SP500.txt  StockAPI.cpp  StockAPI.h  config.h  main.cpp
include/: Environment.h  Organism.h  StockAPI.h
src/: Environment.cpp  Organism.cpp  StockAPI.cpp  main.cpp
